--- a/BEDA/DataAnalysisWindow.xib
+++ b/BEDA/DataAnalysisWindow.xib
@@ -53,7 +53,7 @@
 				<int key="NSWindowBacking">2</int>
 				<string key="NSWindowRect">{{196, 240}, {677, 436}}</string>
 				<int key="NSWTFlags">544735232</int>
-				<string key="NSWindowTitle">Window</string>
+				<string key="NSWindowTitle">Data Analysis</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
@@ -66,7 +66,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{549, 3}, {114, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -95,7 +94,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{403, 7}, {147, 26}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="641217894"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -132,12 +130,13 @@
 									<string>mean.R</string>
 									<string>median.R</string>
 									<string>summary.R</string>
+									<string>std.R</string>
 								</array>
 								<reference key="NSDelegate" ref="752057352"/>
 								<object class="NSComboTableView" key="NSTableView" id="1030647730">
 									<reference key="NSNextResponder"/>
 									<int key="NSvFlags">274</int>
-									<string key="NSFrameSize">{13, 21}</string>
+									<string key="NSFrameSize">{13, 63}</string>
 									<reference key="NSSuperview"/>
 									<reference key="NSWindow"/>
 									<string key="NSReuseIdentifierKey">_NS:24</string>
@@ -228,7 +227,6 @@
 											<array class="NSMutableArray" key="NSSubviews"/>
 											<string key="NSFrameSize">{635, 363}</string>
 											<reference key="NSSuperview" ref="114516302"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="216048730"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<bool key="NSEnabled">YES</bool>
@@ -239,7 +237,6 @@
 												<int key="NSvFlags">256</int>
 												<string key="NSFrameSize">{635, 17}</string>
 												<reference key="NSSuperview" ref="65425373"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="114516302"/>
 												<string key="NSReuseIdentifierKey">_NS:16</string>
 												<reference key="NSTableView" ref="152355362"/>
@@ -310,7 +307,6 @@
 									</array>
 									<string key="NSFrame">{{1, 17}, {635, 363}}</string>
 									<reference key="NSSuperview" ref="334014098"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="152355362"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<reference key="NSDocView" ref="152355362"/>
@@ -322,7 +318,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 									<reference key="NSSuperview" ref="334014098"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="332169251"/>
 									<string key="NSReuseIdentifierKey">_NS:58</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -336,7 +331,6 @@
 									<int key="NSvFlags">-2147483392</int>
 									<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 									<reference key="NSSuperview" ref="334014098"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="752057352"/>
 									<string key="NSReuseIdentifierKey">_NS:60</string>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -353,7 +347,6 @@
 									</array>
 									<string key="NSFrame">{{1, 0}, {635, 17}}</string>
 									<reference key="NSSuperview" ref="334014098"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="706680668"/>
 									<string key="NSReuseIdentifierKey">_NS:15</string>
 									<reference key="NSDocView" ref="706680668"/>
@@ -363,7 +356,6 @@
 							</array>
 							<string key="NSFrame">{{20, 35}, {637, 381}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="65425373"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133682</int>
@@ -379,7 +371,6 @@
 					</array>
 					<string key="NSFrameSize">{677, 436}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="334014098"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -898,6 +889,7 @@
 					<string>mean.R</string>
 					<string>median.R</string>
 					<string>summary.R</string>
+					<string>std.R</string>
 				</array>
 				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -941,51 +933,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">85</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DataAnalysisController</string>
-					<string key="superclassName">NSObject</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">doAnalysis:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">doAnalysis:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">doAnalysis:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="comboBoxScriptSelection">NSComboBox</string>
-						<string key="tableview">NSTableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="comboBoxScriptSelection">
-							<string key="name">comboBoxScriptSelection</string>
-							<string key="candidateClassName">NSComboBox</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableview">
-							<string key="name">tableview</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DataAnalysisController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
