--- a/BEDA/AnnotView.xib
+++ b/BEDA/AnnotView.xib
@@ -56,10 +56,9 @@
 										<reference key="NSNextResponder" ref="610153569"/>
 										<int key="NSvFlags">256</int>
 										<array class="NSMutableArray" key="NSSubviews"/>
-										<string key="NSFrameSize">{570, 76}</string>
+										<string key="NSFrameSize">{574, 76}</string>
 										<reference key="NSSuperview" ref="610153569"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="649440721"/>
+										<reference key="NSNextKeyView" ref="879131888"/>
 										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<bool key="NSEnabled">YES</bool>
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -67,9 +66,8 @@
 										<object class="NSTableHeaderView" key="NSHeaderView" id="197845106">
 											<reference key="NSNextResponder" ref="649440721"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrameSize">{570, 17}</string>
+											<string key="NSFrameSize">{574, 17}</string>
 											<reference key="NSSuperview" ref="649440721"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="610153569"/>
 											<string key="NSReuseIdentifierKey">_NS:16</string>
 											<reference key="NSTableView" ref="343092598"/>
@@ -205,7 +203,7 @@
 											</object>
 											<object class="NSTableColumn" id="320608084">
 												<string key="NSIdentifier">Percentage Behavior</string>
-												<double key="NSWidth">164</double>
+												<double key="NSWidth">168</double>
 												<double key="NSMinWidth">10</double>
 												<double key="NSMaxWidth">3.4028234663852886e+38</double>
 												<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -255,9 +253,8 @@
 										<int key="NSTableViewGroupRowStyle">1</int>
 									</object>
 								</array>
-								<string key="NSFrame">{{1, 17}, {570, 76}}</string>
+								<string key="NSFrame">{{1, 17}, {574, 76}}</string>
 								<reference key="NSSuperview" ref="154991534"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="343092598"/>
 								<string key="NSReuseIdentifierKey">_NS:11</string>
 								<reference key="NSDocView" ref="343092598"/>
@@ -269,7 +266,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{555, 17}, {16, 7}}</string>
 								<reference key="NSSuperview" ref="154991534"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="280672477"/>
 								<string key="NSReuseIdentifierKey">_NS:58</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -283,7 +279,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{1, 136}, {530, 16}}</string>
 								<reference key="NSSuperview" ref="154991534"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:60</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								<int key="NSsFlags">1</int>
@@ -297,9 +292,8 @@
 								<array class="NSMutableArray" key="NSSubviews">
 									<reference ref="197845106"/>
 								</array>
-								<string key="NSFrame">{{1, 0}, {570, 17}}</string>
+								<string key="NSFrame">{{1, 0}, {574, 17}}</string>
 								<reference key="NSSuperview" ref="154991534"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="197845106"/>
 								<string key="NSReuseIdentifierKey">_NS:15</string>
 								<reference key="NSDocView" ref="197845106"/>
@@ -307,10 +301,9 @@
 								<int key="NScvFlags">4</int>
 							</object>
 						</array>
-						<string key="NSFrame">{{0, 9}, {572, 94}}</string>
+						<string key="NSFrame">{{0, 2}, {576, 94}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="610153569"/>
+						<reference key="NSNextKeyView" ref="649440721"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="21256652"/>
@@ -325,17 +318,15 @@
 					<object class="NSCustomView" id="240128382">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{0, 111}, {572, 146}}</string>
+						<string key="NSFrame">{{0, 104}, {576, 88}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="154991534"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSClassName">CPTGraphHostingView</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{572, 257}</string>
+				<string key="NSFrameSize">{576, 192}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="240128382"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -499,7 +490,7 @@
 								<object class="NSTextField" id="1047877202">
 									<reference key="NSNextResponder" ref="932199232"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrameSize">{164, 17}</string>
+									<string key="NSFrameSize">{168, 17}</string>
 									<reference key="NSSuperview" ref="932199232"/>
 									<reference key="NSNextKeyView" ref="21256652"/>
 									<string key="NSAntiCompressionPriority">{250, 750}</string>
@@ -516,7 +507,7 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								</object>
 							</array>
-							<string key="NSFrame">{{404, 1}, {164, 17}}</string>
+							<string key="NSFrame">{{404, 1}, {168, 17}}</string>
 							<reference key="NSNextKeyView" ref="1047877202"/>
 						</object>
 						<reference key="destination" ref="1047877202"/>
@@ -554,7 +545,7 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="1005"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="166080574">
+							<object class="IBNSLayoutConstraint" id="404636265">
 								<reference key="firstItem" ref="1005"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -562,23 +553,7 @@
 								<int key="secondAttribute">4</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">9</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="1005"/>
-								<int key="scoringType">3</int>
-								<float key="scoringTypeFloat">9</float>
-								<int key="contentType">3</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="1038352879">
-								<reference key="firstItem" ref="154991534"/>
-								<int key="firstAttribute">3</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="1005"/>
-								<int key="secondAttribute">3</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">154</double>
+									<double key="value">2</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="1005"/>
@@ -600,6 +575,22 @@
 								<reference key="containingView" ref="1005"/>
 								<int key="scoringType">6</int>
 								<float key="scoringTypeFloat">24</float>
+								<int key="contentType">3</int>
+							</object>
+							<object class="IBNSLayoutConstraint" id="282385330">
+								<reference key="firstItem" ref="154991534"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="1005"/>
+								<int key="secondAttribute">3</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">96</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="1005"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
 							<object class="IBNSLayoutConstraint" id="889289101">
@@ -1147,18 +1138,18 @@
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">82</int>
+						<int key="objectID">123</int>
+						<reference key="object" ref="282385330"/>
+						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">124</int>
 						<reference key="object" ref="855823814"/>
 						<reference key="parent" ref="1005"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">83</int>
-						<reference key="object" ref="1038352879"/>
-						<reference key="parent" ref="1005"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">85</int>
-						<reference key="object" ref="166080574"/>
+						<int key="objectID">125</int>
+						<reference key="object" ref="404636265"/>
 						<reference key="parent" ref="1005"/>
 					</object>
 				</array>
@@ -1173,15 +1164,18 @@
 					<reference ref="989487445"/>
 					<reference ref="829957193"/>
 					<reference ref="889289101"/>
+					<reference ref="282385330"/>
 					<reference ref="855823814"/>
-					<reference ref="1038352879"/>
-					<reference ref="166080574"/>
+					<reference ref="404636265"/>
 				</array>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="YES" key="10.ibExternalAutomaticallyCalculatesRowSizeFromViewHeight"/>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="123.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="124.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="125.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="YES" key="14.isInViewBasedMode"/>
@@ -1262,9 +1256,6 @@
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="81.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="82.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="85.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="NO" key="9.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
@@ -1272,50 +1263,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">85</int>
+			<int key="maxID">125</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AnnotViewController</string>
-					<string key="superclassName">NSViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="graphview">CPTGraphHostingView</string>
-						<string key="tableview">NSTableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="graphview">
-							<string key="name">graphview</string>
-							<string key="candidateClassName">CPTGraphHostingView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableview">
-							<string key="name">tableview</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AnnotViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">CPTGraphHostingView</string>
-					<string key="superclassName">NSView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CPTGraphHostingView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
